--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.21",
+    "mongoose": "^6.1.3",
     "nodemon": "^2.0.13"
   }
 }
