--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "3.3.1",
     "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.17.2",
     "lodash": "^4.17.21",
+    "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
